--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,5 @@
-click==8.0.4
-Flask==2.2.2
-Jinja2==3.1.2
-joblib==1.1.1
-MarkupSafe==2.1.1
-numpy==1.23.5
-pandas==1.5.3
-pickle-mixin==1.0.2
-python-dateutil==2.8.2
-pytz==2022.7
-scikit-learn==1.2.1
-scipy==1.10.0
-six==1.16.0
-sklearn==0.0
-threadpoolctl==2.2.0
-streamlit==1.2.0
-streamlit-option-menu==0.3.2
+flask
+pickle
+numpy
+pandas
+scikit-learn
