--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
 flask
-pickle-mixin
+scikit-learn==1.2.1
+click
+Flask
+Flask-Cors
+gunicorn
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
 numpy
 pandas
-scikit-learn==1.2.1
+pickle-mixin
+python-dateutil
+pytz
+scipy
+six
+sklearn
 threadpoolctl
+Werkzeug
